[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-img-scaler"
version = "0.0.3"
description = "A cross-platform AI upscaling utility to upscale images to a higher resolution."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
dependencies = [
    # --- PyTorch Core
    "torch>=2.12.0",
    "torchvision>=0.21.0",

    # --- Core Infrastructure
    "opencv-python>=4.10.0",
    "tqdm>=4.67.0",

    # --- AI Super-Resolution Models
    "torchsr>=1.0.4",

    # --- Env Configuration
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
# Automatically generates a system path entry when installed via pip
py_img_scaler = "py_img_scaler.config.cli_config:get_parsed_args"

[tool.black]
line-length = 120
target-version = ['py314']

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
# Instructs Ruff's formatter engine to skip breaking down inline/block comments
# when you transition over from Black entirely down the line.
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.pycodestyle]
# Instruct the linter to permit long comments containing task tags (# TODO:, # FIXME:)
ignore-overlong-task-comments = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Tell mypy to ignore setuptools build and distribution artifacts
exclude = [
    '^build/',
    '^dist/',
    '\.egg-info/'
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["py_img_scaler*"]

